infrastructure/base/controllers/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - grafana.homelab.local
    secretName: grafana-cert
  rules:
  - host: grafana.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
